# hpcore

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  cluster-create.sh  cluster-start.sh  consensus-test-continuous.sh  consensus-test-loop.sh  dev-setup.sh  makefile  release.sh  reset.sh
appbill/: appbill  appbill.cpp  makefile
examples/: .gitignore
examples/appbill/: appbill
examples/browser_client/: hp-browser-client-lib.js  hp-client-lib.js  sodium.js  test.html  test.js  text-client.js
examples/c_contract/: .gitignore  echo_contract.c  hotpocket_contract.h  rnd_contract.c
examples/echo_contract/: Dockerfile  contract.js
examples/echocontract/: Dockerfile  contract.js  package-lock.json
examples/file_contract/: contract.js  package.json
examples/hpclient/: .gitignore  .hp_client_keys  client.js  file-client.js  hp-client-lib.js  libtest.js  malicious-client.js  package-lock.json  package.json  text-client.js
examples/hpcluster/: cluster.sh  start.sh
examples/hpcontract/: contract.js  package.json
examples/js_client/: Dockerfile  README.md  browser-example.html  browser-test.html  file-client.js  hp-client-lib.js  package-lock.json  package.json  text-client.js
examples/nodejs_client/: Dockerfile  client-build.sh  client-start.sh  file-client.js  hp-client-lib.js  hp-node-client-lib.js  hp-node-client-lib2.js  multi-client.js  package-lock.json  package.json  text-client.js
examples/nodejs_contract/: diagnostic_contract.js  echo_contract.js  file_contract.js  hp-contract-lib.js  package-lock.json  package.json
examples/random_contract/: .gitignore  rnd_contrac.c
examples/rndcontract/: rnd_contract
examples/todo_contract/: DbModel.cs  HPHelper.cs  HPModel.cs  Program.cs
myctr/cfg/: hp.cfg
src/: conf.cpp  conf.h  conf.hpp  consensus.cpp  consensus.hpp  crypto.cpp  crypto.h  crypto.hpp  health.cpp  health.hpp  hplog.cpp  hplog.h  hplog.hpp  keys.cpp  keys.h  ledger.cpp  ledger.hpp  ledger_sample.cpp  ledger_sample.hpp  main.cpp  pchheader.hpp  peer_session_handler.cpp  peer_session_handler.h  proc.cpp  proc.h  proc.hpp  public_session_handler.cpp  public_session_handler.h  sc.cpp  sc.hpp  shared.cpp  shared.h  status.cpp  status.hpp  unl.cpp  unl.hpp  usr.cpp  usr.h  util.cpp  util.h  (+1 more)
src/bill/: appbill.cpp  corebill.cpp  corebill.h
src/comm/: comm_client.cpp  comm_client.hpp  comm_server.cpp  comm_server.hpp  comm_session.cpp  comm_session.hpp  comm_session_handler.hpp  comm_session_threshold.hpp  hpws.hpp  hpws_comm_session.cpp  hpws_comm_session.hpp  self_comm_session.cpp  self_comm_session.hpp
src/cons/: cons.cpp  cons.hpp  ledger.fbs  ledger_generated.h  ledger_handler.cpp  ledger_handler.hpp  state_handler.cpp  state_handler.hpp  state_sync.cpp  state_sync.hpp  state_sync_hpfs.cpp  state_sync_hpfs.hpp  statemap_handler.cpp  statemap_handler.hpp
src/contract/: contract_mount.hpp  contract_serve.cpp  contract_serve.hpp  contract_sync.cpp  contract_sync.hpp  sc.hpp
src/corebill/: corebill.hpp  tracker.cpp  tracker.hpp
src/debug_shell/: debug_shell.cpp  debug_shell.hpp
src/fbschema/: common_helpers.cpp  common_helpers.hpp  common_schema.fbs  common_schema_generated.h  ledger_helpers.cpp  ledger_helpers.hpp  ledger_schema.fbs  ledger_schema_generated.h  ledger_schema_helpers.cpp  ledger_schema_helpers.hpp  p2pmsg_container.fbs  p2pmsg_container_generated.h  p2pmsg_content.fbs  p2pmsg_content_generated.h  p2pmsg_helpers.cpp  p2pmsg_helpers.hpp  state_response_schema.fbs  state_response_schema_generated.h
src/hpfs/: contract_mount.cpp  contract_mount.hpp  contract_serve.cpp  contract_serve.hpp  contract_sync.cpp  contract_sync.hpp  h32.cpp  h32.hpp  hpfs.cpp  hpfs.hpp  hpfs_manager.cpp  hpfs_manager.hpp  hpfs_mount.cpp  hpfs_mount.hpp  hpfs_serve.cpp  hpfs_serve.hpp  hpfs_sync.cpp  hpfs_sync.hpp  ledger_mount.cpp  ledger_mount.hpp  ledger_serve.cpp  ledger_serve.hpp  ledger_sync.cpp  ledger_sync.hpp
src/hpsh/: hpsh.cpp  hpsh.hpp  util.cpp  util.hpp
src/hpws/: hpws.hpp
src/jsonschema/: usrmsg_helpers.cpp  usrmsg_helpers.hpp
src/killswitch/: CMakeLists.txt  killswitch.c  readme.txt
src/ledger/: ledger.cpp  ledger.hpp  ledger_common.hpp  ledger_mount.cpp  ledger_mount.hpp  ledger_query.cpp  ledger_query.hpp  ledger_sample.cpp  ledger_sample.hpp  ledger_serve.cpp  ledger_serve.hpp  ledger_sync.cpp  ledger_sync.hpp  sqlite.cpp  sqlite.hpp
src/msg/: controlmsg_common.hpp  controlmsg_parser.cpp  controlmsg_parser.hpp  usrmsg_common.hpp  usrmsg_parser.cpp  usrmsg_parser.hpp
src/p2p/: message.fbs  message.pb.cc  message.pb.h  message.proto  message_container.fbs  message_container_generated.h  message_content.fbs  message_content_generated.h  message_generated.h  p2p.cpp  p2p.h  p2p.hpp  peer_comm_server.cpp  peer_comm_server.hpp  peer_comm_session.cpp  peer_comm_session.hpp  peer_message_handler.cpp  peer_message_handler.hpp  peer_session_handler.cpp  peer_session_handler.hpp  self_node.cpp  self_node.hpp
src/proc/: proc.cpp  proc.hpp  ptrace_capture.cpp  ptrace_capture.hpp  ptrace_syscalls.hpp
src/sc/: contract_mount.cpp  contract_mount.hpp  contract_serve.hpp  contract_sync.cpp  contract_sync.hpp  hpfs_log_sync.cpp  hpfs_log_sync.hpp  log_sync.cpp  log_sync.hpp  sc.cpp  sc.hpp
src/sock/: client_session.h  listener.h  root_certificate.hpp  server_listener.cpp  server_listener.h  server_session.cpp  server_session.h  session.h  shared_state.cpp  shared_state.h  socket_client.cpp  socket_client.h  socket_client.hpp  socket_message.cpp  socket_message.hpp  socket_monitor.cpp  socket_monitor.hpp  socket_server.cpp  socket_server.h  socket_server.hpp  socket_session.cpp  socket_session.h  socket_session.hpp  socket_session_handler.h  socket_session_handler.hpp  socket_session_lambda.cpp
src/sock_old/: socket_client.cpp  socket_message.cpp  socket_session_lambda.cpp
src/state/: state_common.cpp  state_common.hpp  state_serve.cpp  state_serve.hpp  state_sync.cpp  state_sync.hpp
src/statefs/: hasher.cpp  hasher.hpp  hashmap_builder.cpp  hashmap_builder.hpp  (+8 more)
test/: global.js  test.js
(+131 files in other folders)
